--- a/.github/workflows/makefile.yml
+++ b/.github/workflows/makefile.yml
@@ -11,13 +11,21 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v4
+    - name: Checkout full repository
+      uses: actions/checkout@v4
+      with:
+        fetch-depth: 0  # Ensures full repo checkout
 
-    - name: Install dependencies
-      run: make
+    - name: Verify Makefile exists
+      run: |
+        ls -l
+        test -f Makefile || (echo "Makefile not found!" && exit 1)
+
+    - name: Build project
+      run: make -C testbench  # Change to correct directory if needed
 
     - name: Run check
-      run: make check
+      run: make -C testbench check  # Ensure it runs in the correct directory
 
     - name: Run distcheck
-      run: make distcheck
+      run: make -C testbench distcheck  # Ensure it runs in the correct directory
